--- a/demos/customText.html
+++ b/demos/customText.html
@@ -24,7 +24,7 @@
 			padding: 35px 30px;
 			max-width: 400px;
 			background: white;
-			box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+			box-shadow: 0 1px 3px rgba(0, 0, 0, .2);
 		}
 
 		.basicPlaceholder {
